# Student_Database_Python_Cpp

./: .gitignore  CMakeLists.txt  README.md  Student.cpp  Student.py
